<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backmain"
    tools:context=".home">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <Button
            android:id="@+id/button"
            android:layout_width="@dimen/_220sdp"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginTop="@dimen/_60sdp"
            android:background="@drawable/subject_button"
            android:fontFamily="@font/alegreya_bold"
            android:text="@string/computer_science_eng"
            android:textColor="#131F50"
            android:textSize="22sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.353"
            tools:ignore="TouchTargetSizeCheck" />

        <Button
            android:id="@+id/button4"
            android:layout_width="@dimen/_220sdp"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:background="@drawable/subject_button"
            android:fontFamily="@font/alegreya_bold"
            android:text="@string/civil_eng"
            android:textColor="#131F50"
            android:textSize="22sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.717"
            tools:ignore="TouchTargetSizeCheck" />

        <Button
            android:id="@+id/button3"
            android:layout_width="@dimen/_220sdp"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:background="@drawable/subject_button"
            android:fontFamily="@font/alegreya_bold"
            android:text="@string/electronics_compu_eng"
            android:textColor="#131F50"
            android:textSize="22sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.569"
            tools:ignore="TouchTargetSizeCheck" />

        <Button
            android:id="@+id/button2"
            android:layout_width="@dimen/_220sdp"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:background="@drawable/subject_button"
            android:fontFamily="@font/alegreya_bold"
            android:text="@string/electronics_comm_eng"
            android:textColor="#131F50"
            android:textSize="22sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.493"
            tools:ignore="TouchTargetSizeCheck" />

        <Button
            android:id="@+id/button1"
            android:layout_width="@dimen/_220sdp"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:background="@drawable/subject_button"
            android:fontFamily="@font/alegreya_bold"
            android:text="@string/mechanical_eng"
            android:textColor="#131F50"
            android:textSize="22sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.423"
            tools:ignore="TouchTargetSizeCheck" />

        <Button
            android:id="@+id/button12"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_27sdp"
            android:layout_marginTop="@dimen/_30sdp"
            android:background="@drawable/subject_button"
            android:fontFamily="@font/alegreya_bold"
            android:text="@string/contact_us"
            android:textAllCaps="false"
            android:textColor="#131F50"
            android:textSize="22sp"
            android:layout_marginBottom="@dimen/_2sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.9"
            tools:ignore="TouchTargetSizeCheck" />
    </LinearLayout>


</RelativeLayout>